<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv1"
        android:text="@string/tv1_text"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:inputType="number"
        android:text=""
        android:hint="@string/et1_hint"
        android:background="@color/colorAccent"
        android:textColor="@color/culoare"
        android:layout_gravity="left"/>

<Space
    android:layout_width="wrap_content"
    android:layout_height="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/btn1_text"
        android:layout_gravity="left"
        android:gravity="right"
        />

    <RadioGroup
            android:layout_gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgroup1">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb1"
            android:text="@string/rb1_text"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb2"
            android:text="@string/rb2_text"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb3"
            android:checked="true"
            android:text="@string/rb3_text"/>

    </RadioGroup>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb1"
        android:text="@string/cb1_text"
        android:layoutDirection="ltr"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb2"
        android:text="@string/cb1_text"
        android:layoutDirection="rtl"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tb1"
        android:textOn="ON"
        android:textOff="OFF"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch1"
        android:text="Switch"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image1"
        android:src="@drawable/ic_android_black_24dp"/>

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ib1"
        android:src="@drawable/ic_android_black_24dp"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pb1"
                android:max="100"
                android:indeterminate="false"
                android:progress="50"/>
            <ProgressBar
                android:layout_width="match_parent"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_height="wrap_content"
                android:id="@+id/pb2"
                android:max="100"
                android:indeterminate="true"
                />

            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar1"
                android:max="200"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:spinnerMode="dropdown"
                android:entries="@array/variante"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>